[package]
name = "ng-wallet"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
authors = ["Niko PLP <niko@nextgraph.org>"]
description = "keeps the secret keys of all identities of the user in a safe wallet"
repository = "https://git.nextgraph.org/NextGraph/nextgraph-rs"

[dependencies]
serde = { version = "1.0.142", features = ["derive"] }
serde_bare = "0.5.0"
serde_bytes = "0.11.7"
serde-big-array = "0.5.1"
p2p-repo = { path = "../p2p-repo" }
p2p-net = { path = "../p2p-net" }
image = "0.24.6"
getrandom = { version = "0.1.1", features = ["wasm-bindgen"] }
rand =  { version = "0.7", features = ["getrandom"] }
chacha20poly1305 = "0.10.1"
#{version = "0.10.1", features = ["heapless","getrandom"] }
# slice_as_array = "1.1.0"
argon2 = "0.5.0"
safe-transmute = "0.11.2"
aes-gcm-siv = {version = "0.11.1", features = ["aes","heapless","getrandom","std"] }
base64-url = "2.0.0"
async-std = {  version = "1.12.0", features = ["attributes","unstable"] }
web-time = "0.2.0"
lazy_static = "1.4.0"
zeroize = { version = "1.6.0", features = ["zeroize_derive"] }
crypto_box = { version = "0.8.2", features = ["seal"] }