[package]
name = "ngcli"
description = "CLI command-line interpreter of NextGraph, a decentralized, secure and local-first web 3.0 ecosystem based on Semantic Web and CRDTs"
categories = ["command-line-interface"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
documentation.workspace = true
rust-version.workspace = true

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-std = {  version = "1.12.0", features = ["attributes"] }
zeroize = { version = "1.7.0" }
getrandom = "0.2.7"
blake3 = "1.3.1"
duration-str = "0.7.1"
clap = { version = "4.3.5", features = ["env","string","cargo"] }
log = "0.4"
env_logger = "0.10"
ng-repo = { path = "../ng-repo", version = "0.1.0-preview.8", features = ["server_log_output"] }
ng-net = { path = "../ng-net", version = "0.1.0-preview.8" }
ng-client-ws = { path = "../ng-client-ws", version = "0.1.0-preview.8" }