[package]
name = "p2p-client-ws"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
authors = ["Niko PLP <niko@nextgraph.org>"]
description = "P2P Client module of NextGraph"
repository = "https://git.nextgraph.org/NextGraph/nextgraph-rs"

[dependencies]
p2p-repo = { path = "../p2p-repo" }
p2p-net = { path = "../p2p-net" }
chacha20 = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_bare = "0.5.0"
serde_bytes = "0.11.7"
async-trait = "0.1.64"
async-std = {  version = "1.12.0", features = ["attributes","unstable"] }
futures = "0.3.24"
async-channel = "1.7.1"
async-oneshot = "0.5.0"
ws_stream_wasm = "0.7" 
pharos = "0.5"
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "^0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.2.7"
features = ["js"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
getrandom = "0.2.7"
xactor = "0.7.11"
async-tungstenite = {  version = "0.17.2", features = ["async-std-runtime"] }
